--- a/navbar.html
+++ b/navbar.html
@@ -40,10 +40,10 @@
                             <li>
                                 <a href="r-mac-source.html">Building R-devel</a>
                             </li>
-                            <li class="divider"></li>
+                            <!-- <li class="divider"></li>
                             <li>
                                 <a href="other_code.html">Other</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li>
