--- a/trame.html
+++ b/trame.html
@@ -131,7 +131,7 @@
 <ul>
     <li>The source code is available on <a href="https://github.com/TraME-Project/TraME" target="_blank">GitHub</a>.</li>
     <li>To use the linear programming features, TraME requires an installation of Gurobi or GLPK.</li>
-    <li><strong>Note:</strong> Gurobi performs significantly better than GLPK.</li>
+    <!-- <li><strong>Note:</strong> Gurobi performs significantly better than GLPK.</li> -->
 </ul>
 
 <p>TraME can be installed in the standard way:</p>
