--- a/optimlib.html
+++ b/optimlib.html
@@ -110,13 +110,13 @@ pre {
 
 <hr>
 
-<p>OptimLib is a lightweight C++ library for numerical nonlinear optimization and root finding.</p>
+<p>OptimLib is a lightweight C++ library for numerical optimization of nonlinear functions.</p>
 
 <b>Features</b>
 <br>
 <ul>
-    <li>C++11 library.</li>
-    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a>.</li>
+    <li>C++11 library with algorithms for local and global minimization, as well as root finding methods.</li>
+    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient computation of matrix operations.</li>
 </ul>
 
 <br>
@@ -127,7 +127,7 @@ pre {
 
 <hr>
 
-<p>Current version:</p>
+<h3 style="text-align: left;"><strong style="font-size: 95%;">Download and Installation</strong></h3>
 <ul>
     <li>The source code is available on <a href="https://github.com/kthohr/optim" target="_blank">GitHub</a>.</li>
 </ul>
