--- a/gcem.html
+++ b/gcem.html
@@ -149,7 +149,7 @@ pre {
 
 <hr>
 
-<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a templated C++ library for compile-time, efficient computation of special functions.</p>
+<p>GCE-Math (generalized constant expression math, or <strong>gcem</strong>) is a templated C++ library for compile-time computation of special functions.</p>
 
 <p><strong>Features:</strong></p>
 <ul>
