--- a/optimlib_docs_broyden.html
+++ b/optimlib_docs_broyden.html
@@ -82,7 +82,7 @@ pre {
             <div class="col-lg-12">
                 <ol class="breadcrumb">
                     <li><a href="http://www.kthohr.com">Home</a></li>
-                    <li><a href="optimlib">OptimLib</a></li>
+                    <li><a href="optimlib.html">OptimLib</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Algorithms<b class="caret"></b></a>
                         <ul class="dropdown-menu">
