--- a/optimlib.html
+++ b/optimlib.html
@@ -101,7 +101,7 @@ pre {
 <div class="row">
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <img src="pics/sphere_fn.png" class="img-rounded" alt="Sphere" width="304" height="236">
+        <img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236">
     </div>
     <div class="col-md-4">
         <br>
@@ -126,7 +126,7 @@ pre {
 <b>Features</b>
 <br>
 <ul>
-    <li>C++11 library with algorithms for local and global minimization, as well as root finding methods.</li>
+    <li>C++11 library of algorithms for local and global minimization, as well as root finding.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient computation of matrix operations.</li>
 </ul>
 
