--- a/optimlib.html
+++ b/optimlib.html
@@ -126,7 +126,7 @@ pre {
 <b>Features</b>
 <br>
 <ul>
-    <li>C++11 library of algorithms for local and global minimization, as well as root finding.</li>
+    <li>C++11 library for local and global function minimization, as well as root finding.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient computation of matrix operations.</li>
 </ul>
 
