--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -158,7 +158,7 @@ $$X_{i+1} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X_i(j))
 
 <hr>
 
-<h3 style="text-align: left;"><strong style="font-size: 100%;">Example</strong></h3>
+<h3 style="text-align: left;" id="example"><strong style="font-size: 100%;">Example</strong></h3>
 
 <p>As examples, we will use two well-known test functions from the numerical optimization literature: the Rastrigin function and Ackley's function; both functions are 'bumpy' and contain many local minima.</p>
 
