--- a/optimlib.html
+++ b/optimlib.html
@@ -116,7 +116,7 @@ pre {
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
-        <img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236">
+        <a href="optimlib_docs_de.html#example"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
     </div>
 </div>
 
@@ -128,7 +128,7 @@ pre {
 <br>
 <ul>
     <li>C++11 library for local and global function minimization, as well as root finding.</li>
-    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient computation of matrix operations.</li>
+    <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
 <p><strong>Author</strong>: Keith O'Hara</p>
