--- a/optimlib.html
+++ b/optimlib.html
@@ -101,7 +101,7 @@ pre {
 <div class="row">
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236">
+        <a href="optimlib_docs_bfgs.html#example " target="_blank"><img src="pics/sphere_fn.png" class="img-rounded pull-left" alt="Sphere" width="304" height="236"></a>
     </div>
     <div class="col-md-4">
         <br>
@@ -116,7 +116,7 @@ pre {
     <div class="col-md-4">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
         <!-- <img src="pics/rastrigin_fn.png" class="img-rounded pull-right" alt="Sphere" width="304" height="236"> -->
-        <a href="optimlib_docs_de.html#example"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
+        <a href="optimlib_docs_de.html#example" target="_blank"><img src="pics/ackley_fn_3d.png" class="img-rounded pull-right" alt="Ackley" width="304" height="236"></a>
     </div>
 </div>
 
@@ -127,7 +127,7 @@ pre {
 <b>Features</b>
 <br>
 <ul>
-    <li>C++11 library for local and global function minimization, as well as root finding.</li>
+    <li>C++11 library of local and global optimization methods, as well as root finding.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
 </ul>
 
