--- a/optimlib_docs_bfgs.html
+++ b/optimlib_docs_bfgs.html
@@ -169,7 +169,7 @@ $$\alpha_i = \arg \min_\alpha f(x_i + \alpha d_i)$$
 
 <h3 style="text-align: left;" id="example"><strong style="font-size: 100%;">Example</strong></h3>
 
-<p>In this example, we consider minimization of the sphere function:</p>
+<p>As an example, consider minimization of the sphere function:</p>
 $$\min_{x \in \mathbb{R}^n} \sum_{i=1}^n x_i^2$$
 <p>The solution is the zero vector. Code implementing this in OptimLib is given below.</p>
 
