--- a/optimlib_docs_sumt.html
+++ b/optimlib_docs_sumt.html
@@ -113,20 +113,20 @@ pre {
 
 <p><strong>Function definition:</strong></p>
 <pre class="brush: cpp;">
-bool sumt_int(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-              std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double* value_out, optim_opt_settings* opt_params);
+bool sumt_int(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
+              std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, double* value_out, optim_opt_settings* opt_params);
 
-bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data);
+bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
+          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data);
 
-bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, optim_opt_settings& opt_params);
+bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
+          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, optim_opt_settings& opt_params);
 
-bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double& value_out);
+bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
+          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, double& value_out);
 
-bool sumt(arma::vec& init_out_vals, std::function<double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)> opt_objfn, void* opt_data,
-          std::function<arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)> constr_fn, void* constr_data, double& value_out, optim_opt_settings& opt_params);
+bool sumt(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals_inp, arma::vec* grad_out, void* opt_data)&gt; opt_objfn, void* opt_data,
+          std::function&lt;arma::vec (const arma::vec& vals_inp, arma::mat* jacob_out, void* constr_data)&gt; constr_fn, void* constr_data, double& value_out, optim_opt_settings& opt_params);
 </pre>
 
 <p><strong>Function arguments:</strong></p>
