--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -160,7 +160,7 @@ $$X_{i+1} (j,:) = \begin{cases} X_c^*(j,:) & \text{ if } f(X_c^*(j)) < f(X_i(j))
 
 <h3 style="text-align: left;" id="example"><strong style="font-size: 100%;">Example</strong></h3>
 
-<p>As examples, we will use two well-known test functions from the numerical optimization literature: the Rastrigin function and Ackley's function; both functions are 'bumpy' and contain many local minima.</p>
+<p>As examples, we will tackle two well-known performance tests from the numerical optimization literature: the Rastrigin function and Ackley's function; both functions are 'bumpy' and contain many local minima.</p>
 
 <p>The Rastrigin function:</p>
 $$\min_{x \in [-5,5]^n} \left\{ A n + \sum_{i=1}^n \left( x_i^2 - A \cos(2 \pi x_i) \right) \right\}$$
