--- a/optimlib.html
+++ b/optimlib.html
@@ -122,7 +122,7 @@ pre {
 
 <hr>
 
-<p>OptimLib is a lightweight C++ library for numerical optimization of nonlinear functions.</p>
+<p>OptimLib is a C++ library for numerical optimization of nonlinear functions.</p>
 
 <b>Features</b>
 <br>
