--- a/gcem.html
+++ b/gcem.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="Bayesian Macroeconometrics in R (BMR)">
+    <meta name="description" content="Generalized Constant Expression Math: a compile-time templated library of special functions.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="constexpr, compile-time library, special functions, template metaprogramming, C++, C++11, C++14, Cpp, NYU, New York University, Math, Econometrics, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
@@ -32,13 +32,6 @@
     <style>
     h3:target { padding-top: 60px; margin-top: -60px;}
     </style>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
     <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
