--- a/optimlib.html
+++ b/optimlib.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <meta name="description" content="OptimLib: a lightweight C++ optimization library.">
+    <meta name="description" content="OptimLib: a C++ numerical optimization library.">
     <meta name="author" content="Keith O'Hara">
 
-    <meta name="keywords" content="Bayesian, Macroeconometrics, BMR, Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
+    <meta name="keywords" content="optimization, root finding, differential evolution, BFGS, C++, C++11, Cpp, NYU, New York University, Econometrics, Research" />
 
     <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
 
