--- a/optimlib.html
+++ b/optimlib.html
@@ -107,6 +107,7 @@ pre {
         <br>
         <br>
         <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>OptimLib</u></strong></h3>
+        <!-- <p style="text-align: center;"><a href="https://github.com/kthohr/optim" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p> -->
         <p style="text-align: center;"><a href="https://travis-ci.org/kthohr/optim" target="_blank"><img src="https://travis-ci.org/kthohr/optim.svg?branch=master" alt="optim Build"></a>
         <a href="https://codecov.io/github/kthohr/optim?branch=master" target="_blank"><img src="https://codecov.io/github/kthohr/optim/coverage.svg?branch=master" alt="Coverage Status"></a></p>
         <p style="text-align: center;"><a class="github-button" href="https://github.com/kthohr/optim/subscription" data-icon="octicon-eye" data-count-href="/kthohr/optim/watchers" data-count-api="/repos/kthohr/optim#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch kthohr/optim on GitHub">Watch</a>
@@ -124,8 +125,7 @@ pre {
 
 <p>OptimLib is a C++ library for numerical optimization of nonlinear functions.</p>
 
-<b>Features</b>
-<br>
+<p><strong>Features</strong></p>
 <ul>
     <li>C++11 library of local and global optimization methods, as well as root finding.</li>
     <li>Built on the <a href="http://arma.sourceforge.net" target="_blank">Armadillo C++ linear algebra library</a> for fast and efficient matrix computation.</li>
