--- a/optimlib.html
+++ b/optimlib.html
@@ -153,6 +153,13 @@ make
 make install</pre>
 <p>The last line will install OptimLib into /usr/local</p>
 
+<p>Options for configure:</p>
+<ul>
+    <li><code>-b dev</code> a 'development' build</li>
+    <li><code>-c</code> a coverage build</li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code> or <code>-m "-framework Accelerate"</code></li>
+    <li><code>-p</code> a parallelized build using OpenMP</li>
+</ul>
         <hr>
 
         <!-- Footer -->
