--- a/trame.html
+++ b/trame.html
@@ -147,7 +147,7 @@ make install</pre>
     <li><code>-b dev</code> a 'development' build</li>
     <li><code>-c</code> a coverage build</li>
     <li><code>-l</code> specify a linear programming library to use; for example <code>-l glpk</code> or <code>-l gurobi</code></li>
-    <li><code>-m</code> specify the BLAS and Lapack libraries to link the TraME shared library against; for example, <code>-m "-lopenblas"</code></li>
+    <li><code>-m</code> specify the BLAS and Lapack libraries to link against the shared library; for example, <code>-m "-lopenblas"</code></li>
     <li><code>-p</code> a parallelized build using OpenMP</li>
 </ul>
 
