--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -185,7 +185,7 @@ $$\min_{x \in [-5,5]^2} \left\{ -20 \exp \left( -0.2 \sqrt{0.5(x_1^2 + x_2^2)} \
     </div>
 </div>
 
-<p>The solution to both minimization problems is the zero vector. Code implementing this in OptimLib is given below.</p>
+<p>Both minimization problems possess a unique global minimum: the zero vector. Code implementing this in OptimLib is given below.</p>
 
 <pre class="brush: cpp;">
 #include "optim.hpp"
