--- a/optimlib_docs_de.html
+++ b/optimlib_docs_de.html
@@ -141,6 +141,7 @@ bool de(arma::vec& init_out_vals, std::function&lt;double (const arma::vec& vals
     <li><code>int de_check_freq</code> number of generations between convergence checks.</li>
     <li><code>double de_par_F</code> the mutation parameter $F$ in the details section below.</li>
     <li><code>double de_par_CR</code> the crossover parameter $CR$ in the details section below.</li>
+    <li><code>bool de_rand_F</code> whether to randomize the mutation parameter $F$ between generations.</li>
 </ul>
 
 <hr>
