--- a/optimlib.html
+++ b/optimlib.html
@@ -142,7 +142,7 @@ pre {
     <li>The source code is available on <a href="https://github.com/kthohr/optim" target="_blank">GitHub</a>.</li>
 </ul>
 
-<p>OptimLib can be installed using:</p>
+<p>OptimLib can be installed in the standard way:</p>
 <pre class="brush: bash;">
 # clone optim
 git clone -b master --single-branch https://github.com/kthohr/optim ./optim
@@ -151,7 +151,7 @@ cd ./optim
 ./configure
 make
 make install</pre>
-<p>The last line will install OptimLib into /usr/local</p>
+<p>The last line will install OptimLib into <samp>/usr/local</sampe></p>
 
 <p>Options for configure:</p>
 <ul>
