--- a/trame.html
+++ b/trame.html
@@ -12,7 +12,7 @@
 
     <meta name="keywords" content="Economics, PhD student, NYU, New York University, Econometrics, R, C++, Cpp, Research" />
 
-    <link rel="shortcut icon" type="image/x-icon" href="siteicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="trame_icon.ico">
 
     <title>Transportation Methods for Econometrics (TraME)</title>
 
@@ -78,8 +78,24 @@
         </div>
         <!-- /.row -->
 
+<div class="row">
+    <div class="col-md-2">
+        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
+        <img src="pics/trame_monge.png" class="img-responsive center-block" alt="" width="150" height="150">
+    </div>
+    <div class="col-md-8">
+        <br>
+        <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
+        <!-- <p style="text-align: center;"><a href="https://github.com/TraME-Project/TraME" target="_blank"><i class="fa fa-github-square fa-2x" style="color:black"></i></a></p> -->
+        <!-- <p style="text-align: center;"><a href="https://travis-ci.org/TraME-Project/TraME" target="_blank"><img src="https://travis-ci.org/TraME-Project/TraME.svg?branch=master" alt="optim Build"></a> -->
+        <!-- <a href="https://codecov.io/github/TraME-Project/TraME?branch=master" target="_blank"><img src="https://codecov.io/github/TraME-Project/TraME/coverage.svg?branch=master" alt="Coverage Status"></a></p> -->
+        <!-- <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> -->
+        <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> -->
+        <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> -->
+    </div>
+</div>        
 
-<h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3>
+<!-- <h3 style="text-align: center;"><strong style="font-size: 130%;"><u>Transportation Methods for Econometrics</u></strong></h3> -->
 <p> &nbsp </p>
 
 <p>TraME (<b><i>Tra</i></b>nsportation <b><i>M</i></b>ethods for <b><i>E</i></b>conometrics) is a C++ library for solving problems of equilibrium computation and estimation in consumer demand and matching frameworks via the Mass Transportation Approach.</p>
