--- a/trame.html
+++ b/trame.html
@@ -137,7 +137,7 @@
 
 <p><strong>Authors</strong>:</p>
 <ul>
-    <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> (R) and <a href="http://www.kthohr.com" target="_blank">Keith O'Hara</a> (C++)
+    <li>TraME Team: <a href="http://alfredgalichon.com/" target="_blank">Alfred Galichon</a> and <a href="http://www.kthohr.com" target="_blank">Keith O'Hara</a>
     <li>Contributors: Yifei Sun, <a href="https://sites.google.com/site/webersimonsite/home" target="_blank">Simon Weber</a></li>
 </ul>
 
