--- a/navbar.html
+++ b/navbar.html
@@ -38,7 +38,7 @@
                             </li>
                             <li class="divider"></li>
                             <li>
-                                <a href="r-mac-source.html">Building R-devel</a>
+                                <a href="r-mac-source.html">R-devel</a>
                             </li>
                             <!-- <li class="divider"></li>
                             <li>
