--- a/trame.html
+++ b/trame.html
@@ -81,7 +81,7 @@
 <div class="row">
     <div class="col-md-2">
         <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
-        <img src="pics/trame_monge.png" class="img-responsive center-block" alt="" width="150" height="150">
+        <a href="https://en.wikipedia.org/wiki/Gaspard_Monge" target="_blank"><img src="pics/trame_monge.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
     </div>
     <div class="col-md-8">
         <br>
@@ -93,6 +93,10 @@
         <!-- <p style="text-align: center;"><a class="github-button" href="https://github.com/TraME-Project/TraME/subscription" data-icon="octicon-eye" data-count-href="/TraME-Project/TraME/watchers" data-count-api="/repos/TraME-Project/TraME#subscribers_count" data-count-aria-label="# watchers on GitHub" aria-label="Watch TraME-Project/TraME on GitHub">Watch</a> -->
         <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME" data-icon="octicon-star" data-count-href="/TraME-Project/TraME/stargazers" data-count-api="/repos/TraME-Project/TraME#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star TraME-Project/TraME on GitHub">Star</a> -->
         <!-- <a class="github-button" href="https://github.com/TraME-Project/TraME/fork" data-icon="octicon-repo-forked" data-count-href="/TraME-Project/TraME/network" data-count-api="/repos/TraME-Project/TraME#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork TraME-Project/TraME on GitHub">Fork</a></p> -->
+    </div>
+    <div class="col-md-2">
+        <!-- <img class="img-responsive" src="pics/wsp_2.jpg" alt=""> -->
+        <a href="https://en.wikipedia.org/wiki/Leonid_Kantorovich" target="_blank"><img src="pics/trame_kantorovich.png" class="img-responsive center-block" alt="" width="150" height="150"></a>
     </div>
 </div>        
 
